fix: scrollbar css

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,38 +8,31 @@
   scroll-behavior: smooth;
   font-family: "Fira Code";
 }
-/* Firefox */
 * {
   scrollbar-width: thin;
-  scrollbar-color: #808080;
+  scrollbar-color: rgb(55 65 81 / var(--tw-bg-opacity)) transparent;
 }
 
 /* Chrome, Edge and Safari */
 *::-webkit-scrollbar {
-  width: 4px;
-  height: 4px;
+  width: 8px;
+  height: 8px;
 }
 *::-webkit-scrollbar-track {
-  border-radius: 20px;
-  background-color: #0000;
-}
-
-*::-webkit-scrollbar-track:hover {
-  background-color: #0000;
-}
-
-*::-webkit-scrollbar-track:active {
-  background-color: #0000;
+  background-color: transparent;
 }
 
 *::-webkit-scrollbar-thumb {
   background-color: #808080;
+  border-radius: 20px;
+  border: 2px solid transparent;
+  background-clip: content-box;
 }
 
 *::-webkit-scrollbar-thumb:hover {
-  background-color: #808080;
+  background-color: #9a9a9a;
 }
 
 *::-webkit-scrollbar-thumb:active {
-  background-color: #808080;
+  background-color: #6b6b6b;
 }
